fix page overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     min-width: 468px;
-    margin: 1rem;
+    padding: 1rem;
     }
     
     .div1 {
@@ -18,15 +18,21 @@
     .div2 { 
         grid-area: 1 / 2 / 2 / 3; 
         display: flex; 
-        justify-content: end;
+        justify-content: space-between;
+
+        .api-count{}
     }
     .div3 { grid-area: 2 / 1 / 3 / 3; }
 
     .fail-guage{
-        display: flex; 
-        flex-direction: column;
+        padding: 0.5rem 1rem;
+    height: fit-content;
+    background-color: rgba(59, 130, 246, 0.24);
+    border-radius: 0.5rem;
         p{
             font-size: 12px;
             color: red;
+            margin-bottom: 0;
         }
     }
+
